# bot

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
config/: plans.json  servers.yml
docs/: ALERTS.md  ARCHITECTURE.md  BACKUP_RESTORE.md  BUILD_ORDER.md  DASHBOARD_QUERIES.md  DESIGN.md  GO_LIVE.md  INPUTS_REQUIRED.md  INTEGRATION_GUIDE.md  PRIMARY_SOURCES.md  ROLLBACK.md  RUNBOOK.md  SECURITY.md  SLO_ALERTS.md  SOURCES.md  STAGING.md  TEST_LOG.md  ledger.md  payments.md  state_machines.md
docs/contracts/: remnawave_2.5.7_contract.md
docs/dashboards/: README.md  outbox.md  payments.md  remnawave.md
docs/runbooks/: README.md  dr.md  outbox.md  payments.md  remnawave.md
docs/slo/: README.md  outbox.md  payments.md  remnawave.md
scripts/: fetch_contract.py  simulate_flow.py
src/bot/: __init__.py  config.py  ledger.py  main.py  metrics.py  models.py  outbox.py  payments.py  safe_mode.py  server_selector.py
tests/: test_ledger.py  test_outbox.py  test_payments.py  test_safe_mode.py  test_server_selector.py
tests/contracts/: test_remnawave_contract.py
