[project]
name = "vpn-telegram-bot"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"
packages = ["bot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
